# MicroService.Manager

./: MS.ManagerListener.cpp  MS.ManagerListener.hpp  MS.ManagerService.cpp  MS.ManagerService.hpp  README.md
client/: .gitignore  build.gradle  sdk  settings.gradle
client/app/: build.gradle
client/app/src/androidTest/java/com/elastos/microservice/manager/: ExampleInstrumentedTest.java
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/elastos/microservice/manager/: ContactApi.java  ContactUtils.java  FileUtils.java  Helper.java  MainActivity.java
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/menu/: menu_main.xml
client/app/src/main/res/values/: strings.xml
client/app/src/test/java/com/elastos/microservice/manager/: ExampleUnitTest.java
client/gradle/wrapper/: gradle-wrapper.properties
client/sdk/: .gitignore  build.gradle
client/sdk/src/main/java/app/elaphant/sdk/peernode/: PeerNodeListener.java
dump/client/app/src/main/: AndroidManifest.xml
dump/client/app/src/main/java/com/elastos/microservice/manager/: MainActivity.java  MainActivity.java.bak
dump/client/app/src/main/res/values/: strings.xml
dump/client/gradle/: android.gradle
dump/server/: ManagerService.h
server/: .ManagerService.cpp.swp  CMakeLists.txt  ManagerService.cpp
server/Command/: ManagerServiceCmd.hpp
server/source/: ManagerService.cpp
server/source/Command/: ManagerServiceCmd.cpp
server/source/DataBase/: DatabaseProxy.cpp  DatabaseProxy.h  ServiceInfo.cpp  ServiceInfo.h
